--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -581,12 +581,16 @@ h2 {
   font-weight: 700;
 }
 
-.photos-grid__item img, .entry img {
+.photos-grid__item img, .entry img:not(.screenshot) {
   width: 100%;
   border-radius: 0.25rem;
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.entry img.screenshot {
+  width: 100%;
 }
 
 .entry-body img:first-child {
