Add og- and twitter card meta tags

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -90,4 +90,7 @@
   {{ range $filename := .Site.Params.plugins_html }}
     {{ partial $filename $ }}
   {{ end }}
+
+  {{ template "_internal/opengraph.html" . }}
+  {{ template "_internal/twitter_cards.html" . }}
 </head>
