--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -69,6 +69,12 @@
   <link rel="webmention" href="https://micro.blog/webmention" />
   <link rel="subscribe" href="https://micro.blog/users/follow" />
 
+  <!-- Preload our fonts so that they are fetched even before 
+  the browser has parsed the css that is declaring them. -->
+  <link rel="preload" href="fonts/charter_regular-webfont.woff" as="font" />
+  <link rel="preload" href="fonts/charter_bold-webfont.woff" as="font" />
+  <link rel="preload" href="fonts/charter_italic-webfont.woff" as="font" />
+
   {{ hugo.Generator }}
   {{- $styles := resources.Get "css/dist.css" -}}
   {{- if
@@ -77,6 +83,10 @@
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
   {{ else }}
     {{- $styles := $styles| minify | fingerprint -}}
+
+
+    <!-- Preload the css file so that it is cached more aggressively by the browser. -->
+    <link rel="preload" href="{{ $styles.RelPermalink }}" as="style" />
     <link
       rel="stylesheet"
       href="{{ $styles.Permalink }}"
