--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -426,7 +426,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 body {
-  font-size: 18px;
+  font-size: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   font-family: Charter, ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
