--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -3,7 +3,7 @@
     <header>
       <!-- Title and Publication Date -->
       {{ if .Title }}
-        <h1 class="text-xl font-bold p-name">{{ .Title }}</h1>
+        <h1 class="text-xl font-bold p-name"><a class="u-url" href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
         <time
           class="dt-published"
           datetime="{{ .PublishDate.Format "2006-01-02 15:04:05 -0700" }}"
@@ -11,12 +11,12 @@
           {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
         </time>
       {{ else }}
-        <h1 class="font-bold p-name">
+        <h1 class="font-bold">
           <time
             class="dt-published"
             datetime="{{ .PublishDate.Format "2006-01-02 15:04:05 -0700" }}"
           >
-            {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+            <a class="u-url" href="{{ .RelPermalink }}">{{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}</a>
           </time>
         </h1>
       {{ end }}
