--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -13,15 +13,11 @@
                   {{ range where .Pages "Type" "post" }}
                     {{ if eq .Kind "page" }}
                       <li class="h-entry e-content">
+                        <a href="{{ .Permalink }}" class="u-url"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">{{ .Date.Format "2006-01-02" }}</time></a>:
                         {{ if .Title }}
-                          <a class="u-url p-name" href="{{ .Permalink }}"
-                            >{{ .Title | markdownify }}</a
-                          >
-                        {{ else }}
-                          <a class="u-url p-summary" href="{{ .Permalink }}"
-                            >{{ .Summary | truncate 100 }}</a
-                          >
+                          <strong class="p-name">{{ .Title | markdownify }}</strong>
                         {{ end }}
+                        <span class="u-url p-summary">{{ .Summary | truncate 100 }}</span>
                       </li>
                     {{ end }}
 
