--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -1,32 +1,34 @@
 {{ define "main" }}
-  <div class="space-y-32 h-feed">
+  <div class="space-y-16 h-feed">
+    <h1>Tidigare, på Ditt & Datt:</h1>
     {{ range .Site.RegularPages.GroupByPublishDate "2006" }}
       {{ if ne .Key "0001" }}
-        <div class="space-y-2">
-          <h2 class="font-bold">{{ .Key }}</h2>
-          <div class="space-y-16">
-            {{ range .Pages.GroupByDate "January" }}
-              <div class="space-y-2">
-                <h3 class="font-bold">{{ .Key }}</h3>
+          {{ range .Pages.GroupByDate "January 2006" }}
+            <div class="space-y-4">
+              <h3 class="font-bold">{{ humanize .Key }}</h3>
 
-                <ul class="space-y-4">
-                  {{ range where .Pages "Type" "post" }}
-                    {{ if eq .Kind "page" }}
-                      <li class="h-entry e-content">
-                        <a href="{{ .Permalink }}" class="u-url"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">{{ .Date.Format "2006-01-02" }}</time></a>:
+              <ul class="space-y-4">
+                {{ range where .Pages "Type" "post" }}
+                  {{ if eq .Kind "page" }}
+                    <li class="h-entry e-content pl-4 indent-[-1rem]">
+                      <a href="{{ .Permalink }}" class="u-url">
                         {{ if .Title }}
                           <strong class="p-name">{{ .Title | markdownify }}</strong>
+                        {{ else }}
+                          <span class="u-url p-summary">{{ .Summary | truncate 300 }}</span>
                         {{ end }}
-                        <span class="u-url p-summary">{{ .Summary | truncate 100 }}</span>
-                      </li>
-                    {{ end }}
-
+                        
+                        <small class="ml-4 whitespace-nowrap"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
+                          {{ humanize (dateFormat "Monday, 2 Jan 2006" .PublishDate) }}
+                        </time></small>
+                      </a>
+                    </li>
                   {{ end }}
-                </ul>
-              </div>
-            {{ end }}
-          </div>
-        </div>
+
+                {{ end }}
+              </ul>
+            </div>
+          {{ end }}
       {{ end }}
     {{ end }}
   </div>
