--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+<html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
+<head>
   {{ partial "head.html" . }}
-  <body>
-    {{- partial "dev-size-indicator.html" . -}}
-    {{- partial "header.html" . -}}
-
-
-    <main
-      class="w-full {{ if ne .RelPermalink "/photos/" }}
-        max-w-xl md:box-content
-      {{ end }} p-6 md:px-24 "
-    >
-      {{- block "main" . }}{{- end }}
-    </main>
-    {{- partial "dev-parameters.html" . -}}
-    {{- partial "footer.html" . -}}
-
-    {{ range .Site.Params.plugins_js }}
-      <script src="{{ . }}"></script>
-    {{ end }}
-  </body>
+</head>
+<body>
+  <header class="site-header">
+    {{ partial "header.html" . }}
+  </header>
+  <main>
+    {{ block "main" . }}{{ end }}
+  </main>
+  <footer>
+    {{ partial "footer.html" . }}
+  </footer>
+</body>
 </html>
