--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,30 @@
-@import "fonts.css";
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_regular-webfont.woff") format("woff");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_bold-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_italic-webfont.woff") format("woff");
+  font-style: italic;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Charter";
+  src: url("/fonts/charter_bold_italic-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+}
 
 :root {
   --text: #000;
