--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,9 +4,9 @@
 
 <!-- Preload our fonts so that they are fetched even before 
 the browser has parsed the css that is declaring them. -->
-<link rel="preload" href="/fonts/charter_regular-webfont.woff" as="font" />
-<link rel="preload" href="/fonts/charter_bold-webfont.woff" as="font" />
-<link rel="preload" href="/fonts/charter_italic-webfont.woff" as="font" />
+<link rel="preload" href="/fonts/charter_regular-webfont.woff" as="font" type="font/woff2" crossorigin  />
+<link rel="preload" href="/fonts/charter_bold-webfont.woff" as="font" type="font/woff2" crossorigin  />
+<link rel="preload" href="/fonts/charter_italic-webfont.woff" as="font" type="font/woff2" crossorigin  />
 
 {{ partial "microblog_head.html" . }}
 
