Tweak header visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,10 @@ body {
   margin: 0;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 .site-header {
   padding: 0 var(--spacing-gutter);
   display: flex;
