--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -244,6 +244,12 @@ article header h1 {
   font-size: 1.25em;
 }
 
+article h1 ~ time {
+  display: block;
+  font-style: italic;
+  margin-bottom: 1lh;
+}
+
 .post-list {
   display: flex;
   flex-direction: column;
