--- a/layouts/partials/entry.html
+++ b/layouts/partials/entry.html
@@ -1,22 +1,10 @@
 <article class="h-entry entry">
   {{ if .Title }}
-    <h2>
-      <a class="p-name" href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </h2>
-
-    <a href="{{ .Permalink }}" class="u-url">
-      <time
-        class="dt-published"
-        datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
-        itemprop="datePublished"
-      >
-        {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
-      </time>
-    </a>
-
-    <section class="e-content entry-body">{{ .Content }}</section>
-  {{ else }}
-    <h2>
+    <header>
+      <h1>
+        <a class="p-name" href="{{ .RelPermalink }}">{{ .Title }}</a>
+      </h1>
+  
       <a href="{{ .Permalink }}" class="u-url">
         <time
           class="dt-published"
@@ -26,7 +14,23 @@
           {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
         </time>
       </a>
-    </h2>
+    </header>
+
+    <section class="e-content entry-body">{{ .Content }}</section>
+  {{ else }}
+    <header>
+      <h1>
+        <a href="{{ .Permalink }}" class="u-url">
+          <time
+            class="dt-published"
+            datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
+            itemprop="datePublished"
+          >
+            {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+          </time>
+        </a>
+      </h1>
+    </header>
 
     <section class="e-content entry-body">{{ .Content }}</section>
   {{ end }}
