Update archive listing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -385,6 +385,10 @@ Archive:
 
 **/
 
+.archive-categories a {
+  text-decoration: underline;
+}
+
 .archive-group-list {
   display: flex;
   flex-direction: column;
