--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="{{ .RelPermalink }}">
   {{- else }}
     {{- with . | minify | fingerprint }}
+      <link rel="preload" href="{{ .RelPermalink }}" as="style" />
       <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
     {{- end }}
   {{- end }}
