--- a/layouts/partials/entry.html
+++ b/layouts/partials/entry.html
@@ -4,14 +4,14 @@
       <h1>
         <a class="p-name" href="{{ .RelPermalink }}">{{ .Title }}</a>
       </h1>
-  
+
       <a href="{{ .Permalink }}" class="u-url">
         <time
           class="dt-published"
           datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
           itemprop="datePublished"
         >
-          {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+          {{ partial "date.html" . }}
         </time>
       </a>
     </header>
@@ -26,7 +26,7 @@
             datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
             itemprop="datePublished"
           >
-            {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+          {{ partial "date.html" . }}
           </time>
         </a>
       </h1>
@@ -35,4 +35,3 @@
     <section class="e-content entry-body">{{ .Content }}</section>
   {{ end }}
 </article>
-
