--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
   <div class="archive-group-list">
-    
+
     <h1>Tidigare, på Ditt & Datt:</h1>
-    
+
     {{ $list := ($.Site.GetPage "taxonomyTerm" "categories").Pages }}
     {{ if gt (len $list) 0 }}
     <div class="archive-categories">
@@ -16,14 +16,14 @@
           </div>
     </div>
     {{ end }}
-    
+
     <div class="h-feed archive-group-list">
       {{ range .Site.RegularPages.GroupByPublishDate "2006" }}
         {{ if ne .Key "0001" }}
             {{ range .Pages.GroupByDate "January 2006" }}
               <div>
                 <h3 class="archive-group-heading">{{ humanize .Key }}</h3>
-  
+
                 <ul class="archive-post-list">
                   {{ range where .Pages "Type" "post" }}
                     {{ if eq .Kind "page" }}
@@ -34,14 +34,14 @@
                           {{ else }}
                             <span class="u-url p-summary">{{ .Summary | truncate 300 }}</span>
                           {{ end }}
-                          
+
                           <small><time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-0700" }}">
-                            {{ humanize (dateFormat "Monday, 2 Jan 2006" .PublishDate) }}
+                            {{ partial "date.html" . }}
                           </time></small>
                         </a>
                       </li>
                     {{ end }}
-  
+
                   {{ end }}
                 </ul>
               </div>
