Add plugins script

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,5 +13,10 @@
   <footer>
     {{ partial "footer.html" . }}
   </footer>
+  
+  {{ partial "custom_footer.html" . }}
+  {{ range .Site.Params.plugins_js }}
+    <script src="{{ . }}"></script>
+  {{ end }}
 </body>
 </html>
