--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,9 @@
   --font-sans: system-ui, sans-serif;
   --font-serif: Charter, ui-serif, Georgia, Cambria, Times New Roman, Times,
   serif;
+  
+  --blockquote-text-color: #555;
+  --blockquote-border-color: #bdbdbd;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -74,6 +77,9 @@
 
     --link-hover-background: rgb(71 85 105);
     --shadow-color: 223deg 75% 3%;
+    
+    --blockquote-text-color: #bdbdbd;
+    --blockquote-border-color: #555;
   }
 }
 
@@ -378,6 +384,13 @@ video {
 
 .entry-body img + img {
   margin-top: 1lh;
+}
+
+.entry-body blockquote {
+  color: var(--blockquote-text-color);
+  border-left: 1px solid var(--blockquote-border-color);
+  margin: 1lh 0;
+  padding: 0 1.5ch;
 }
 
 /**
