--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -209,13 +209,14 @@ article {
 }
 
 a {
-  color: var(--text);
+  color: inherit;
   text-decoration: none;
 }
 
 a:hover {
   background-color: var(--link-hover-background);
   border-radius: 0.125em;
+  outline: 2px solid var(--link-hover-background);
 }
 
 img,
