Add View transitions to article links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+@view-transition {
+  navigation: auto;
+}
+
 @font-face {
   font-family: "Charter";
   src: url("/fonts/charter_regular-webfont.woff") format("woff");
@@ -62,7 +66,7 @@
   --font-sans: system-ui, sans-serif;
   --font-serif: Charter, ui-serif, Georgia, Cambria, Times New Roman, Times,
   serif;
-  
+
   --blockquote-text-color: #555;
   --blockquote-border-color: #bdbdbd;
 }
@@ -77,7 +81,7 @@
 
     --link-hover-background: rgb(71 85 105);
     --shadow-color: 223deg 75% 3%;
-    
+
     --blockquote-text-color: #bdbdbd;
     --blockquote-border-color: #555;
   }
